crates/k-rust/tests/snapshots/outer_parser__list_declaration_checks_match_the_frontend_categories.snap
---
source: crates/k-rust/tests/outer_parser.rs
description: "K source:\n\nmodule LISTS\n  syntax K ::= List{Exp, \",\"}\n  syntax Loop ::= List{Loop, \",\"}\n  syntax Exps ::= \"[\" List{Exp, \",\"} \"]\"\n  syntax Good ::= NeList{Exp, \",\"}\nendmodule\n"
---
[
    Diagnostic {
        severity: Error,
        code: InvalidListDeclaration,
        message: "K can not be extended to be a list sort.",
        source: Some(
            "lists.k",
        ),
        location: Some(
            Location {
                start_line: 2,
                start_column: 16,
                end_line: 2,
                end_column: 30,
            },
        ),
        input_addresses: [],
    },
    Diagnostic {
        severity: Error,
        code: InvalidListDeclaration,
        message: "Circular lists are not allowed.",
        source: Some(
            "lists.k",
        ),
        location: Some(
            Location {
                start_line: 3,
                start_column: 19,
                end_line: 3,
                end_column: 34,
            },
        ),
        input_addresses: [],
    },
    Diagnostic {
        severity: Error,
        code: InvalidListDeclaration,
        message: "Inline list declarations are not allowed.",
        source: Some(
            "lists.k",
        ),
        location: Some(
            Location {
                start_line: 4,
                start_column: 19,
                end_line: 4,
                end_column: 41,
            },
        ),
        input_addresses: [],
    },
]
