crates/k-rust/tests/snapshots/outer_parser__modules_and_imports.snap
---
source: crates/k-rust/tests/outer_parser.rs
description: "K source:\n\nrequires \"domains.md\"\n\nmodule COLLECTIONS [main]\n  imports public BOOL\n  imports private MAP\n  syntax Exp\nendmodule\n"
---
SourceFile {
    source: "modules_and_imports.k",
    source_id: SourceId(
        0,
    ),
    requires: [
        Require {
            path: "domains.md",
            span: Span {
                start: Position {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
                end: Position {
                    offset: 21,
                    line: 1,
                    column: 22,
                },
            },
        },
    ],
    modules: [
        Module {
            name: "COLLECTIONS",
            attributes: [
                Attribute {
                    key: "main",
                    value: None,
                },
            ],
            imports: [
                Import {
                    module: "BOOL",
                    public: true,
                    span: Span {
                        start: Position {
                            offset: 51,
                            line: 4,
                            column: 3,
                        },
                        end: Position {
                            offset: 70,
                            line: 4,
                            column: 22,
                        },
                    },
                },
                Import {
                    module: "MAP",
                    public: false,
                    span: Span {
                        start: Position {
                            offset: 73,
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            offset: 92,
                            line: 5,
                            column: 22,
                        },
                    },
                },
            ],
            sentences: [
                Syntax(
                    SyntaxDeclaration {
                        name: None,
                        parameters: [],
                        sort: Sort {
                            name: "Exp",
                            parameters: [],
                        },
                        body: Sort(
                            [],
                        ),
                        span: Span {
                            start: Position {
                                offset: 95,
                                line: 6,
                                column: 3,
                            },
                            end: Position {
                                offset: 105,
                                line: 6,
                                column: 13,
                            },
                        },
                    },
                ),
            ],
            span: Span {
                start: Position {
                    offset: 23,
                    line: 3,
                    column: 1,
                },
                end: Position {
                    offset: 115,
                    line: 7,
                    column: 10,
                },
            },
        },
    ],
}
